Layout bugfix

--- a/scss/page/service-detail.scss
+++ b/scss/page/service-detail.scss
@@ -13,6 +13,7 @@
 
 	 	@include tabletAndUp() {
 	 		min-height: 40vw;
+	 		padding-top: 0;
 	 		padding-bottom: 7rem;
 		 	background-size: cover;
 		 	background-position: bottom center;
